// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`blocks: Material card and image card match material card 1`] = `
"<!-- wp:query {\\"query\\":{\\"perPage\\":10,\\"pages\\":0,\\"offset\\":0,\\"postType\\":\\"post\\",\\"categoryIds\\":[],\\"tagIds\\":[],\\"order\\":\\"desc\\",\\"orderBy\\":\\"date\\",\\"author\\":\\"\\",\\"search\\":\\"\\",\\"exclude\\":[],\\"sticky\\":\\"\\",\\"inherit\\":true},\\"displayLayout\\":{\\"type\\":\\"flex\\",\\"columns\\":3}} -->
<div class=\\"wp-block-query\\"><!-- wp:post-template {\\"className\\":\\"is-style-material-masonry\\"} -->
<!-- wp:material/card-query /-->
<!-- /wp:post-template -->

<!-- wp:material/query-pagination {\\"layout\\":{\\"type\\":\\"flex\\",\\"justifyContent\\":\\"center\\"}} -->
<!-- wp:material/query-pagination-first /-->

<!-- wp:material/query-pagination-previous /-->

<!-- wp:material/query-pagination-next /-->

<!-- wp:material/query-pagination-last /-->
<!-- /wp:material/query-pagination --></div>
<!-- /wp:query -->"
`;

exports[`blocks: Material card and image card match material image card 1`] = `
"<!-- wp:query {\\"query\\":{\\"perPage\\":10,\\"pages\\":0,\\"offset\\":0,\\"postType\\":\\"post\\",\\"categoryIds\\":[],\\"tagIds\\":[],\\"order\\":\\"desc\\",\\"orderBy\\":\\"date\\",\\"author\\":\\"\\",\\"search\\":\\"\\",\\"exclude\\":[],\\"sticky\\":\\"\\",\\"inherit\\":true},\\"displayLayout\\":{\\"type\\":\\"flex\\",\\"columns\\":3}} -->
<div class=\\"wp-block-query\\"><!-- wp:post-template {\\"className\\":\\"is-style-material-masonry\\"} -->
<!-- wp:material/image-card-query /-->
<!-- /wp:post-template -->

<!-- wp:material/query-pagination {\\"layout\\":{\\"type\\":\\"flex\\",\\"justifyContent\\":\\"center\\"}} -->
<!-- wp:material/query-pagination-first /-->

<!-- wp:material/query-pagination-previous /-->

<!-- wp:material/query-pagination-next /-->

<!-- wp:material/query-pagination-last /-->
<!-- /wp:material/query-pagination --></div>
<!-- /wp:query -->"
`;
